# voice-ai-receptionist

./: BILLING_GUIDE.md  LIVEKIT_SETUP.md  README.md  VOICE_OPTIONS.md  start.sh
backend/: .gitignore  agent.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/app/: config.py  main.py
backend/src/: server.ts
frontend/: index.html  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: livekit-receptionist-client.ts  receptionist-client.ts
frontend/src/: main.ts  styles.css
